add Moringa School link

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
            I am a skilled video editor, writer and social media marketer.I love travelling,cooking,working out and lately coding.
            lets interact!
         <h2>My projects</h2>
-            From the start of my journey as a programmer i have worked on a couple of projects like creating my first website which was such a tough but an
-            eye opening experience.Being my first time to code,i didn't know what i was getting myself into but through the help of my team leader and classmates, i was able to find my way like understanding the softwares used and grasping the commands just to mention a few.
-            see below some of the projects i have worked on:
-            1. My favorite things
-            2. My first website
+            Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with.
+             <a href="https://moringaschool.com/">1.Moringa School</a>
+            
        </p>
 
        <footer></footer>
