add Agile peopleops framework link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h2>My projects</h2>
             Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with.
              <a href="https://moringaschool.com/">1.Moringa School</a>
+            <a href="https://agilepeopleopsframework.com/">2.Agile Peopleops framework</a>
             
        </p>
 
