add line breaker

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
            I am a skilled video editor, writer and social media marketer.I love travelling,cooking,working out and lately coding.
            lets interact!
         <h2>My projects</h2>
-            Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with.
-             <a href="https://moringaschool.com/">1.Moringa School</a>
+            Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with. <br>
+             <a href="https://moringaschool.com/">1.Moringa School</a> <br>
             <a href="https://agilepeopleopsframework.com/">2.Agile Peopleops framework</a>
-            
+
        </p>
 
        <footer></footer>
