add About me title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         
     </header>
        <h1>Maureen</h1>
-       <div>About Me</div>
+       <h3>About Me</h3>
+       
 
 
        <p>I am skilled communication specialist with a Bachelor degree in Communication and 
