add unordered list

--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
            I am a newbee programmer, i decided to embark on an intense but very interesting journey
            because i love challenging myself and creating things that are fun and interesting for me and my friends.I did an extensive research and realised
            all this is possible through programming so here I am!
-           I am a skilled video editor, writer and social media marketer.I love travelling,cooking,working out and lately coding.
-           lets interact!
+           I am a skilled:
+           <ul>
+               <li>Video editor</li>
+               <li>Writer</li>
+               <li>Social media marketer</li>
+            </ul> 
+           I love:
+           <ul>
+               <li>Travelling</li><li>Cooking</li><li>Working out</li><li>Lately coding</li>
+           </ul>
+           
         <h2>My projects</h2>
             Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with. <br>
              <a href="https://moringaschool.com/">1.Moringa School</a> <br>
