--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            I am a newbee programmer, i decided to embark on an intense but very interesting journey
            because i love challenging myself and creating things that are fun and interesting for me and my friends.I did an extensive research and realised
            all this is possible through programming so here I am!
-           I am a skilled:
+           <header>I am a skilled:</header>
            <ul>
                <li>Video editor</li>
                <li>Writer</li>
