--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                <li>Writer</li>
                <li>Social media marketer</li>
             </ul> 
-           I love:
+             <header>I love:</header> 
            <ul>
                <li>Travelling</li><li>Cooking</li><li>Working out</li><li>Lately coding</li>
            </ul>
