--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
            I am a newbee programmer, i decided to embark on an intense but very interesting journey
            because i love challenging myself and creating things that are fun and interesting for me and my friends.I did an extensive research and realised
            all this is possible through programming so here I am!
-           <header>I am a skilled:</header>
+           </p>
+          <div class="list">
+              <h4>I love:</h4>
+              <ul>
+               <li>Travelling</li>
+               <li>Cooking</li>
+               <li>Working out</li>
+               <li>Lately coding</li>
+              </ul>
+           <h4>I am skilled:</h4> 
            <ul>
                <li>Video editor</li>
                <li>Writer</li>
                <li>Social media marketer</li>
-            </ul> 
-             <header>I love:</header> 
-           <ul>
-               <li>Travelling</li><li>Cooking</li><li>Working out</li><li>Lately coding</li>
-           </ul>
+           
+           </div>
            
         <h2>My projects</h2>
             Since the beginning of my programming journey, we have not created any projects but below is a list of links i have interacted with. <br>
