--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 
        </p>
 
-       <footer></footer>
+       <footer>
+           <img src="images/me.jpg" alt="">
+           <img src="images/email.png" alt="">
+       </footer>
     
 
        
