--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
        </p>
 
        <footer>
-           <img src="images/me.jpg" alt="">
+           <div class="footer">
+           <img src="images/linkedIn.png" alt="">
            <img src="images/email.png" alt="">
+           </div>
        </footer>
     
 
